--- a/siteExemplo/index.html
+++ b/siteExemplo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,7 @@
     <h1>Olá,mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro tempora voluptatem voluptates placeat quas fugiat quidem quisquam quis minus? Ipsa cupiditate tempora neque a deserunt possimus, quibusdam minus id harum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sequi nesciunt et perspiciatis praesentium sit error enim, sunt nisi quae ullam aliquam sint, blanditiis cum, fugit voluptatum totam provident! Illo.</p>
     
 </body>
 </html>
